--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build LaTeX document
 on: [push]
 jobs:
-  Exam1:
+  Homework_1:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
