changed build branch name main to master

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           name: AoM_Homework_1
           path: Homework1_HingstmanJeffrey.pdf  
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
