--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: Homework1_HingstmanJeffrey
+          root_file: Homework1_HingstmanJeffrey.tex
       - uses: actions/upload-artifact@v2
         with:
           name: AoM_Homework_1
